force-app/main/default/objects/Lead/fields/Additional_Languages__c.field-meta.xml
<CustomField>
    <fullName>Additional_Languages__c</fullName>
    <label>Additional Languages</label>
    <length>50</length>
    <type>Text</type>
</CustomField>