force-app/main/default/objects/Lead/fields/Annual_Taxable_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Taxable_Income__c</fullName>
    <label>Annual Taxable Income</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$0 – 18,210</fullName>
            </value>
            <value>
                <fullName>$18,211 – 24,690</fullName>
            </value>
            <value>
                <fullName>$24,691 – 31,170</fullName>
            </value>
            <value>
                <fullName>$31,171 – 37,650</fullName>
            </value>
            <value>
                <fullName>$37,651 – 44,130</fullName>
            </value>
            <value>
                <fullName>$44,131 – 50,610</fullName>
            </value>
            <value>
                <fullName>$50,611 – 57,090</fullName>
            </value>
            <value>
                <fullName>$57,091 – 63,570</fullName>
            </value>
            <value>
                <fullName>Over $63,570</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>