force-app/main/default/objects/Lead/fields/ASA_Symposium__c.field-meta.xml
<CustomField>
    <fullName>ASA_Symposium__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lead_ASA Symposium</description>
    <label>ASA Symposium</label>
    <type>Checkbox</type>
</CustomField>