force-app/main/default/objects/Lead/fields/Beyond_the_Students__c.field-meta.xml
<CustomField>
    <fullName>Beyond_the_Students__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beyond the Students</label>
    <type>Checkbox</type>
</CustomField>