force-app/main/default/objects/Lead/fields/Birth_Year__c.field-meta.xml
<CustomField>
    <fullName>Birth_Year__c</fullName>
    <description>Returns the Birth Year from Birth Date Field</description>
    <formula>TEXT(YEAR( BirthDate__c ))</formula>
    <label>Birthyear</label>
    <type>Text</type>
</CustomField>