force-app/main/default/objects/Lead/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <label>BirthDate</label>
    <type>Date</type>
</CustomField>