force-app/main/default/objects/Lead/fields/Career_Goals__c.field-meta.xml
<CustomField>
    <fullName>Career_Goals__c</fullName>
    <label>Career Goals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>