force-app/main/default/objects/Lead/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reach</fullName>
            </value>
            <value>
                <fullName>Impact</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>