force-app/main/default/objects/Lead/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>CU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>