force-app/main/default/objects/Lead/fields/CPS_Advisor_Requested__c.field-meta.xml
<CustomField>
    <fullName>CPS_Advisor_Requested__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is NOT the assigned advisor (the assigned advisor is the lead owner).  This is an advisor requested by the Client at sign-on.</description>
    <label>CPS Advisor Requested</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>startsWith</operation>
            <value>CPS - EOC</value>
        </filterItems>
        <filterItems>
            <field>User.Title</field>
            <operation>notEqual</operation>
            <value>Test Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>