force-app/main/default/objects/Lead/fields/CPS_Lead_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>CPS_Lead_Company_Name__c</fullName>
    <description>Used for generating a generic Company name for Lead - Field not on page layouts or reported . Used in workflow.</description>
    <formula>&#39;College Planning Services &#39;+ TEXT(YEAR(TODAY()))</formula>
    <label>CPS Lead Company Name</label>
    <type>Text</type>
</CustomField>