force-app/main/default/objects/Lead/fields/Days_Stalled__c.field-meta.xml
<CustomField>
    <fullName>Days_Stalled__c</fullName>
    <formula>IF(LastActivityDate &gt; DATEVALUE(LastModifiedDate), today() - LastActivityDate, today() - DATEVALUE(LastModifiedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># Days Stalled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>