force-app/main/default/objects/Lead/fields/Exisiting_Account__c.field-meta.xml
<CustomField>
    <fullName>Exisiting_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Check if there is an existing account here</description>
    <label>Exisiting Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>