force-app/main/default/objects/Lead/fields/Father_s_College__c.field-meta.xml
<CustomField>
    <fullName>Father_s_College__c</fullName>
    <label>Father&#39;s College (if attended)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>