force-app/main/default/objects/Lead/fields/Geographic_Areas_or_Impacted_Schools__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Areas_or_Impacted_Schools__c</fullName>
    <label>Geographic Areas or Impacted Schools</label>
    <type>TextArea</type>
</CustomField>