force-app/main/default/objects/Lead/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Current Grade Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6th grade</fullName>
            </value>
            <value>
                <fullName>7th grade</fullName>
            </value>
            <value>
                <fullName>8th grade</fullName>
            </value>
            <value>
                <fullName>9th grade</fullName>
            </value>
            <value>
                <fullName>10th grade</fullName>
            </value>
            <value>
                <fullName>11th grade</fullName>
            </value>
            <value>
                <fullName>12th grade</fullName>
            </value>
            <value>
                <fullName>In 4th year of 5-year dual enrollment</fullName>
            </value>
            <value>
                <fullName>In 5th year of 5-year dual enrollment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>