force-app/main/default/objects/Lead/fields/Have_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Have_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Appointment?</label>
    <type>Checkbox</type>
</CustomField>