force-app/main/default/objects/Lead/fields/Intake_Date__c.field-meta.xml
<CustomField>
    <fullName>Intake_Date__c</fullName>
    <label>Intake Date</label>
    <type>Date</type>
</CustomField>