force-app/main/default/objects/Lead/fields/Intake_Location__c.field-meta.xml
<CustomField>
    <fullName>Intake_Location__c</fullName>
    <label>Intake Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CPS_Intake_location</valueSetName>
    </valueSet>
</CustomField>