force-app/main/default/objects/Lead/fields/Is_Mobile_Mobile_Guardian__c.field-meta.xml
<CustomField>
    <fullName>Is_Mobile_Mobile_Guardian__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mobile Parent/Guardian&#39;s?</label>
    <type>Checkbox</type>
</CustomField>