force-app/main/default/objects/Lead/fields/Is_Mother_4yr_U_S_College_Grad__c.field-meta.xml
<CustomField>
    <fullName>Is_Mother_4yr_U_S_College_Grad__c</fullName>
    <label>Is Mother 4-yr. U.S. College Grad?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No (did not attend U.S. college)</fullName>
            </value>
            <value>
                <fullName>No (attended some U.S. college)</fullName>
            </value>
            <value>
                <fullName>No (completed 2-year U.S. college)</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>No (completed 4-year non-U.S. college)</fullName>
                <isActive>false</isActive>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>