force-app/main/default/objects/Lead/fields/Lead_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Date__c</fullName>
    <label>Lead Created Date</label>
    <type>Date</type>
</CustomField>