force-app/main/default/objects/Lead/fields/Lead_E_Clipse__c.field-meta.xml
<CustomField>
    <fullName>Lead_E_Clipse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mapped to eclipse on Contact page, client would like to receive eclips</description>
    <label>E-Clipse</label>
    <type>Checkbox</type>
</CustomField>