force-app/main/default/objects/Lead/fields/Lead_LendServ__c.field-meta.xml
<CustomField>
    <fullName>Lead_LendServ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Lead_the client would like to recieve the Lend Serv correspondance</description>
    <label>LendServ</label>
    <type>Checkbox</type>
</CustomField>