force-app/main/default/objects/Lead/fields/Learned_About_Program__c.field-meta.xml
<CustomField>
    <fullName>Learned_About_Program__c</fullName>
    <label>Learned About Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AACA</fullName>
            </value>
            <value>
                <fullName>Attended a Workshop</fullName>
            </value>
            <value>
                <fullName>BHCC</fullName>
            </value>
            <value>
                <fullName>BPL</fullName>
            </value>
            <value>
                <fullName>Call Line</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Flyer</fullName>
            </value>
            <value>
                <fullName>Friend/Relative</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>Info Session</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>JVS</fullName>
            </value>
            <value>
                <fullName>Mass Grant Letter/Email</fullName>
            </value>
            <value>
                <fullName>MRC</fullName>
            </value>
            <value>
                <fullName>Online/social media</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Agency</fullName>
            </value>
            <value>
                <fullName>Previous Client</fullName>
            </value>
            <value>
                <fullName>RCC</fullName>
            </value>
            <value>
                <fullName>Teacher / Counselor Referral</fullName>
            </value>
            <value>
                <fullName>Teen Room</fullName>
            </value>
            <value>
                <fullName>T Poster</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Urban College</fullName>
            </value>
            <value>
                <fullName>Year Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>