force-app/main/default/objects/Lead/fields/Meet_with_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Meet_with_Advisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meet with Advisor?</label>
    <type>Checkbox</type>
</CustomField>