force-app/main/default/objects/Lead/fields/Membership_Size__c.field-meta.xml
<CustomField>
    <fullName>Membership_Size__c</fullName>
    <label>Membership Size</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>