force-app/main/default/objects/Lead/fields/Mission__c.field-meta.xml
<CustomField>
    <fullName>Mission__c</fullName>
    <label>Mission</label>
    <type>TextArea</type>
</CustomField>