force-app/main/default/objects/Lead/fields/Mother_s_College__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_College__c</fullName>
    <label>Mother&#39;s College (if attended)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>