force-app/main/default/objects/Lead/fields/Organization_Type_Industry__c.field-meta.xml
<CustomField>
    <fullName>Organization_Type_Industry__c</fullName>
    <label>Organization Type/Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Profit</fullName>
            </value>
            <value>
                <fullName>Association / Union</fullName>
            </value>
            <value>
                <fullName>For-Profit</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>State / Government</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>