force-app/main/default/objects/Lead/fields/Other_Comments_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Comments_Notes__c</fullName>
    <label>Other Comments/Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>