force-app/main/default/objects/Lead/fields/Other_Learned_about_program__c.field-meta.xml
<CustomField>
    <fullName>Other_Learned_about_program__c</fullName>
    <label>Other: Learned about Program</label>
    <length>100</length>
    <type>Text</type>
</CustomField>