force-app/main/default/objects/Lead/fields/Other_Organization_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Organization_Type__c</fullName>
    <inlineHelpText>Only fill out if &#39;Other&#39; is selected in Organization Type field.</inlineHelpText>
    <label>Other Organization Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>