force-app/main/default/objects/Lead/fields/Other_Programs__c.field-meta.xml
<CustomField>
    <fullName>Other_Programs__c</fullName>
    <label>Other Programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>