force-app/main/default/objects/Lead/fields/pi__conversion_object_name__c.field-meta.xml
<CustomField>
    <fullName>pi__conversion_object_name__c</fullName>
    <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
    <label>Pardot Conversion Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>