force-app/main/default/objects/Lead/fields/pi__first_touch_url__c.field-meta.xml
<CustomField>
    <fullName>pi__first_touch_url__c</fullName>
    <description>The value of the referrer for the first tracked request made by a Prospect.</description>
    <label>Pardot First Referrer</label>
    <length>65000</length>
    <type>LongTextArea</type>
</CustomField>